--- a/docker/Dockerfile.local
+++ b/docker/Dockerfile.local
@@ -3,11 +3,11 @@ FROM golang:alpine AS build-env
 RUN apk add --no-cache git openssh-client gcc musl-dev
 RUN mkdir /app
 WORKDIR /app
-RUN go version
 COPY go.mod .
 COPY go.sum .
 RUN go mod download
 COPY . .
+RUN go test ./... -cover
 RUN go build -o /go/api *.go
 
 # final stage
