support website creation including updating website config and setting the correct bucket policy.  change tags to standard aws format.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,13 +16,14 @@ RUN go mod download
 COPY . .
 RUN go test ./... -cover
 RUN go build -o /go/api -ldflags="-X main.Version=$version -X main.VersionPrerelease=$prerelease -X main.githash=$githash -X main.buildstamp=$buildstamp" *.go
+RUN ./api -version
 
 # final stage
 FROM alpine
 MAINTAINER Camden Fisher <camden.fisher@yale.edu>
 
 WORKDIR /app
-COPY --from=build-env /go/api /app/api
+COPY --from=build-env /app/api /app/api
 RUN chmod 555 /app/api
 
 RUN apk add --no-cache bash ca-certificates wget python gettext && \
