rename s3api package to api

--- a/docker/Dockerfile.local
+++ b/docker/Dockerfile.local
@@ -8,12 +8,12 @@ COPY go.sum .
 RUN go mod download
 COPY . .
 RUN go test ./... -cover
-RUN go build -o /go/api *.go
+RUN go build -o /go/api.out *.go
 
 # final stage
 FROM alpine
 RUN apk add --no-cache ca-certificates
 WORKDIR /app
-COPY --from=build-env /go/api /app/api
+COPY --from=build-env /go/api.out /app/api
 EXPOSE 80
 ENTRYPOINT ["./api"]
