--- a/config/config.example.json
+++ b/config/config.example.json
@@ -55,7 +55,8 @@
       ],
       "domains": {
         "superdomain.org": {
-          "certArn": "arn:aws:acm:us-east-1:123456789:certificate/111111111-2222-3333-4444-55555555555"
+          "certArn": "arn:aws:acm:us-east-1:123456789:certificate/111111111-2222-3333-4444-55555555555",
+          "hostedZoneID": "ABCDEFGHIJKL123"
         }
       },
       "accessLog": {
