--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             - v1-pkg-cache
 
       - run: go get github.com/jstemmer/go-junit-report
-      - run: go mod download
+      - run: go get ./...
       - run:
           name: Run unit tests
           # Store the results of our tests in the $TEST_RESULTS directory
