--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.12 #
-    working_directory: /go/src/github.com/YaleSpinup/s3-api
+      - image: circleci/golang:1.12
 
     environment:
       TEST_RESULTS: /tmp/test-results
@@ -15,21 +14,22 @@ jobs:
       - restore_cache:
       # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
           keys:
-            - v1-pkg-cache
+            - go-mod-v4-{{ checksum "go.sum" }}
 
       - run: go get github.com/jstemmer/go-junit-report
       - run: go get ./...
       - run:
           name: Run unit tests
-          # Store the results of our tests in the $TEST_RESULTS directory
-          command: |
-            trap "go-junit-report <${TEST_RESULTS}/go-test.out > ${TEST_RESULTS}/go-test-report.xml" EXIT
-            go test ./... -cover | tee ${TEST_RESULTS}/go-test.out
 
-      - save_cache: # Store cache in the /go/pkg directory
-          key: v1-pkg-cache
+          # store the results of our tests in the $TEST_RESULTS directory
+          command: |
+            PACKAGE_NAMES=$(go list ./... | circleci tests split --split-by=timings --timings-type=classname)
+            gotestsum --junitfile ${TEST_RESULTS}/gotestsum-report.xml -- $PACKAGE_NAMES
+
+      - save_cache:
+          key: go-mod-v4-{{ checksum "go.sum" }}
           paths:
-            - "/go/pkg"
+            - "/go/pkg/mod"
 
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: /tmp/test-results
@@ -37,3 +37,9 @@ jobs:
 
       - store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: /tmp/test-results
+
+workflows:
+  version: 2
+  build-workflow:
+    jobs:
+      - build
