--- a/docker/config.deco.json
+++ b/docker/config.deco.json
@@ -131,5 +131,6 @@
     }
   },
   "token": "{{ .api_token }}",
-  "logLevel": "{{ .log_level }}"
+  "logLevel": "{{ .log_level }}",
+  "org": "{{ .spinup_org }}"
 }
