--- a/config/config.deco.json
+++ b/config/config.deco.json
@@ -5,7 +5,7 @@
     "akid": "{{ .akid }}",
     "secret": "{{ .secret }}",
     "externalId": "{{ .external_id }}",
-    "role": "{{ .cross_account_role }}",
+    "role": "{{ .xa_role }}",
     "defaultS3BucketActions": [
       "s3:AbortMultipartUpload",
       "s3:DeleteBucketWebsite",
@@ -69,7 +69,7 @@
       }
     },
     "accessLog": {
-      "bucket": "{{ .spinup_logging_bucket }}",
+      "bucket": "{{ .logging_bucket }}",
       "prefix": "s3"
     },
     "cleaner": {
@@ -83,5 +83,5 @@
   },
   "token": "{{ .api_token }}",
   "logLevel": "{{ .log_level }}",
-  "org": "{{ .spinup_org }}"
+  "org": "{{ .org }}"
 }
