--- a/docker/config.deco.json
+++ b/docker/config.deco.json
@@ -1,144 +1,87 @@
-{ 
+{
   "listenAddress": ":8080",
-  "accounts": {
-    "spinup": {
-      "region": "us-east-1",
-      "akid": "{{ .spinup_akid }}",
-      "secret": "{{ .spinup_secret }}",
-      "defaultS3BucketActions": [
-        "s3:AbortMultipartUpload",
-        "s3:DeleteBucketWebsite",
-        "s3:DeleteObject",
-        "s3:DeleteObjectVersion",
-        "s3:GetAccelerateConfiguration",
-        "s3:GetBucketAcl",
-        "s3:GetBucketCORS",
-        "s3:GetBucketLocation",
-        "s3:GetBucketLogging",
-        "s3:GetBucketNotification",
-        "s3:GetBucketPolicy",
-        "s3:GetBucketTagging",
-        "s3:GetBucketVersioning",
-        "s3:GetBucketWebsite",
-        "s3:GetLifecycleConfiguration",
-        "s3:GetObject",
-        "s3:GetObjectAcl",
-        "s3:GetObjectVersion",
-        "s3:GetObjectVersionAcl",
-        "s3:GetReplicationConfiguration",
-        "s3:ListAllMyBuckets",
-        "s3:ListBucket",
-        "s3:ListBucketMultipartUploads",
-        "s3:ListBucketVersions",
-        "s3:ListMultipartUploadParts",
-        "s3:PutAccelerateConfiguration",
-        "s3:PutBucketAcl",
-        "s3:PutBucketCORS",
-        "s3:PutBucketLogging",
-        "s3:PutBucketNotification",
-        "s3:PutBucketPolicy",
-        "s3:PutBucketRequestPayment",
-        "s3:PutBucketTagging",
-        "s3:PutBucketVersioning",
-        "s3:PutBucketWebsite",
-        "s3:PutLifecycleConfiguration",
-        "s3:PutReplicationConfiguration",
-        "s3:PutObject",
-        "s3:PutObjectAcl",
-        "s3:PutObjectVersionAcl",
-        "s3:ReplicateDelete",
-        "s3:ReplicateObject",
-        "s3:RestoreObject"
-      ],
-      "defaultS3ObjectActions": [
-        "s3:*"
-      ],
-      "defaultCloudfrontDistributionActions": [
-        "cloudfront:ListInvalidations",
-        "cloudfront:CreateInvalidation"
-      ],
-      "accessLog": {
-        "bucket": "{{ .spinup_logging_bucket }}",
-        "prefix": "s3"
+   "account": {
+    "region": "us-east-1",
+    "akid": "{{ .akid }}",
+    "secret": "{{ .secret }}",
+    "externalId": "{{ .external_id }}",
+    "role": "{{ .xa_role }}",
+    "defaultS3BucketActions": [
+      "s3:AbortMultipartUpload",
+      "s3:DeleteBucketWebsite",
+      "s3:DeleteObject",
+      "s3:DeleteObjectVersion",
+      "s3:GetAccelerateConfiguration",
+      "s3:GetBucketAcl",
+      "s3:GetBucketCORS",
+      "s3:GetBucketLocation",
+      "s3:GetBucketLogging",
+      "s3:GetBucketNotification",
+      "s3:GetBucketPolicy",
+      "s3:GetBucketTagging",
+      "s3:GetBucketVersioning",
+      "s3:GetBucketWebsite",
+      "s3:GetLifecycleConfiguration",
+      "s3:GetObject",
+      "s3:GetObjectAcl",
+      "s3:GetObjectVersion",
+      "s3:GetObjectVersionAcl",
+      "s3:GetReplicationConfiguration",
+      "s3:ListAllMyBuckets",
+      "s3:ListBucket",
+      "s3:ListBucketMultipartUploads",
+      "s3:ListBucketVersions",
+      "s3:ListMultipartUploadParts",
+      "s3:PutAccelerateConfiguration",
+      "s3:PutBucketAcl",
+      "s3:PutBucketCORS",
+      "s3:PutBucketLogging",
+      "s3:PutBucketNotification",
+      "s3:PutBucketPolicy",
+      "s3:PutBucketRequestPayment",
+      "s3:PutBucketTagging",
+      "s3:PutBucketVersioning",
+      "s3:PutBucketWebsite",
+      "s3:PutLifecycleConfiguration",
+      "s3:PutReplicationConfiguration",
+      "s3:PutObject",
+      "s3:PutObjectAcl",
+      "s3:PutObjectVersionAcl",
+      "s3:ReplicateDelete",
+      "s3:ReplicateObject",
+      "s3:RestoreObject"
+    ],
+    "defaultS3ObjectActions": [
+      "s3:*"
+    ],
+    "defaultCloudfrontDistributionActions": [
+      "cloudfront:ListInvalidations",
+      "cloudfront:CreateInvalidation"
+    ],
+    "domains": {
+      "yalepages.org": {
+        "certArn": "{{ .yalepages_org_arn }}",
+        "hostedZoneID": "{{ .yalepages_zone_id }}"
       },
-      "domains": {
-        "yalepages.org": {
-          "certArn": "{{ .yalepages_org_arn }}",
-          "hostedZoneID": "{{ .yalepages_zone_id }}"
-        },
-        "yalespace.org": {
-          "certArn": "{{ .yalespace_org_arn }}",
-          "hostedZoneID": "{{ .yalespace_zone_id }}"
-        }
-      },
-      "cleaner": {
-        "interval": "1200s",
-        "maxSplay": "60s"
+      "yalespace.org": {
+        "certArn": "{{ .yalespace_org_arn }}",
+        "hostedZoneID": "{{ .yalespace_zone_id }}"
       }
     },
-    "spinupsec": {
-      "region": "us-east-1",
-      "akid": "{{ .spinupsec_akid }}",
-      "secret": "{{ .spinupsec_secret }}",
-      "defaultS3BucketActions": [
-        "s3:AbortMultipartUpload",
-        "s3:DeleteBucketWebsite",
-        "s3:DeleteObject",
-        "s3:DeleteObjectVersion",
-        "s3:GetAccelerateConfiguration",
-        "s3:GetBucketAcl",
-        "s3:GetBucketCORS",
-        "s3:GetBucketLocation",
-        "s3:GetBucketLogging",
-        "s3:GetBucketNotification",
-        "s3:GetBucketPolicy",
-        "s3:GetBucketTagging",
-        "s3:GetBucketVersioning",
-        "s3:GetBucketWebsite",
-        "s3:GetLifecycleConfiguration",
-        "s3:GetObject",
-        "s3:GetObjectAcl",
-        "s3:GetObjectVersion",
-        "s3:GetObjectVersionAcl",
-        "s3:GetReplicationConfiguration",
-        "s3:ListAllMyBuckets",
-        "s3:ListBucket",
-        "s3:ListBucketMultipartUploads",
-        "s3:ListBucketVersions",
-        "s3:ListMultipartUploadParts",
-        "s3:PutAccelerateConfiguration",
-        "s3:PutBucketAcl",
-        "s3:PutBucketCORS",
-        "s3:PutBucketLogging",
-        "s3:PutBucketNotification",
-        "s3:PutBucketPolicy",
-        "s3:PutBucketRequestPayment",
-        "s3:PutBucketTagging",
-        "s3:PutBucketVersioning",
-        "s3:PutBucketWebsite",
-        "s3:PutLifecycleConfiguration",
-        "s3:PutReplicationConfiguration",
-        "s3:PutObject",
-        "s3:PutObjectAcl",
-        "s3:PutObjectVersionAcl",
-        "s3:ReplicateDelete",
-        "s3:ReplicateObject",
-        "s3:RestoreObject"
-      ],
-      "defaultS3ObjectActions": [
-        "s3:*"
-      ],
-      "defaultCloudfrontDistributionActions": [
-        "cloudfront:ListInvalidations",
-        "cloudfront:CreateInvalidation"
-      ],
-      "accessLog": {
-        "bucket": "{{ .spinupsec_logging_bucket }}",
-        "prefix": "s3"
-      }
+    "accessLog": {
+      "bucket": "{{ .logging_bucket }}",
+      "prefix": "s3"
+    },
+    "cleaner": {
+      "interval": "1200s",
+      "maxSplay": "60s"
     }
+  },
+  "accountsMap": {
+    "spinup": "{{ .spinup_account_id }}",
+    "spinupsec": "{{ .spinupsec_account_id }}"
   },
   "token": "{{ .api_token }}",
   "logLevel": "{{ .log_level }}",
-  "org": "{{ .spinup_org }}"
+  "org": "{{ .org }}"
 }
